--- a/package.json
+++ b/package.json
@@ -9,15 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/material": "^5.11.4",
     "@next/font": "13.1.1",
+    "@prisma/client": "^4.8.1",
+    "@trpc/next": "^10.8.2",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "cookie": "^0.5.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "jotai": "^1.13.0",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "react-hook-form": "^7.41.5",
+    "react-query": "^3.39.2",
+    "superjson": "^1.12.1",
+    "typescript": "4.9.4",
+    "zod": "^3.20.2"
+  },
+  "devDependencies": {
+    "@types/cookie": "^0.5.1",
+    "@types/jsonwebtoken": "^9.0.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "prisma": "^4.8.1",
+    "tailwindcss": "^3.2.4"
   }
 }
